--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,21 @@ documentation = "https://docs.rs/hyper-tungstenite"
 edition = "2021"
 
 [dependencies]
-hyper = { version = "0.14.4" }
-pin-project = "1.0.8"
-tokio = "1.2.0"
+hyper = "1.0.0-rc.2"
+http-body-util = "0.1.0-rc.2"
+pin-project-lite = "0.2.9"
+tokio = "1"
 tokio-tungstenite = "0.18.0"
 tungstenite = "0.18.0"
 
 [dev-dependencies]
 assert2 = "0.3.4"
-hyper = { version = "0.14.18", features = ["http1", "server", "tcp"] }
-tokio = { version = "1.2.0", features = ["net", "macros", "rt-multi-thread"] }
+hyper = { version = "1.0.0-rc.2", features = ["full"] }
+http-body-util = "0.1.0-rc.2"
+tokio = { version = "1", features = ["full"] }
 futures = { version = "0.3.12" }
+
+
+[[example]]
+name = "simple"
+path = "examples/simple.rs"
